sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:8: error: reassignment to val
				swapped = true;
                                        ^AlgCocktailSort1:10: error: reassignment to val
			swapped = false;
                                ^AlgCocktailSort1:15: error: reassignment to val
				swapped = true;
                                        ^AlgCocktailSort1:17: error: reassignment to val
			else swapped = false;
                                     ^